--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<header class="header">
+    <h2>Main Page</h2>
+</header>
 <img id="theme-toggle" src="assets/moon.svg" alt="toggle background" width="40" style="cursor: pointer;">
 <script src="script.js"></script>
+<br>
+<p>yap yap yap idk</p>
 <br>
 <a href="https://www.youtube.com/@insertsomethingoverhere" target="_blank">
 <img id="youtube" src="assets/youtube.svg" alt="youtube" width="20" style="cursor: pointer;">
